--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -18,5 +18,5 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 465
           subject: Github Actions job result
-          to: karl-august.kongo@khk.ee
+          to: ${{github.event.pusher.email}}
           from: github-actions
