--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -9,6 +9,6 @@ name: Send mail
     # Required mail subject:
     subject: Github Actions job result
     # Required recipients' addresses:
-    to: karl-august.kongo@khk.ee
+    to: kongopoiss@gmail.com
     # Required sender full name (address can be skipped):
     from: Luke Skywalker # <user@example.com>
