--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.gmail.com
-          server_port: 465
+          server_address: smtp.hotmail.com port
+          server_port: 587
           subject: Github Actions job result
-          to: ${{github.event.pusher.email}}
+          to: karlaugustkk@hotmail.com
           from: github-actions
