--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,8 +15,10 @@ jobs:
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.live.com
-          server_port: 587
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
           subject: Github Actions job result
-          to: karlaugustkk@hotmail.com
+          to: karl-august.kongo@khk.ee
           from: github-actions
