--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,7 +11,7 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Hello msg
-        run: echo Hello, world!
+        run: echo Hello, world! && exit 1
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
