--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -19,6 +19,6 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: Github Actions job result
+          subject: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           to: karl-august.kongo@khk.ee
           from: github-actions
