--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,17 +1,26 @@
-name: Test action
-
+name: markdown-link-check
 on:
   push:
-  workflow_dispatch:
-
 jobs:
-  main:
+  markdown-link-check:
+    name: Check markdown files
     runs-on: ubuntu-latest
     steps:
-
       - uses: actions/checkout@v2
-      - name: Hello msg
-        run: echo Hello, world! && exit 1
+      - name: Markdown links check
+        uses: ruzickap/action-my-markdown-link-checker@v1
+  run-if-failed:
+    runs-on: ubuntu-latest
+    needs: [markdown-link-check]
+    if: always() && (needs.markdown-link-check.result == 'failure')
+    steps:
+      # google chat
+      - name: Post Google Chat message
+        uses: julb/action-post-googlechat-message@v1
+        with:
+          message: "Markdown checker failed!"
+          gchat_webhook_url: ${{ secrets.GCHAT_WEBHOOK_URL }}
+          
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
@@ -22,3 +31,5 @@ jobs:
           subject: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           to: karl-august.kongo@khk.ee
           from: github-actions
+          
+
