--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,13 +14,7 @@ jobs:
     needs: [markdown-link-check]
     if: always() && (needs.markdown-link-check.result == 'failure')
     steps:
-      # google chat
-      - name: Post Google Chat message
-        uses: julb/action-post-googlechat-message@v1
-        with:
-          message: "Markdown checker failed!"
-          gchat_webhook_url: ${{ secrets.GCHAT_WEBHOOK_URL }}
-          
+      # email
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
@@ -31,5 +25,3 @@ jobs:
           subject: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           to: karl-august.kongo@khk.ee
           from: github-actions
-          
-
