--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Markdown links checkss
+      - name: Markdown links check
         uses: ruzickap/action-my-markdown-link-checker@v1
   run-if-failed:
     runs-on: ubuntu-latest
