--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -24,4 +24,4 @@ jobs:
           password: ${{secrets.MAIL_PASSWORD}}
           subject: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} failed!
           to: karl-august.kongo@khk.ee
-          from: github-actions
+          from: KarlKo1 github-actions
