--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -22,6 +22,7 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} failed!
+          subject: Build job of ${{github.repository}} failed!
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} failed!
           to: karl-august.kongo@khk.ee
           from: KarlKo1 github-actions
