--- a/.github/workflows/github-action-test.yml
+++ b/.github/workflows/github-action-test.yml
@@ -24,5 +24,5 @@ jobs:
           password: ${{secrets.MAIL_PASSWORD}}
           subject: Build job of ${{github.repository}} failed!
           body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} failed!
-          to: karl-august.kongo@khk.ee
+          to: kongopoiss2@gmail.com
           from: KarlKo github-actions
